--- a/index.html
+++ b/index.html
@@ -1,29 +1,4 @@
-<!DOCTYPE HTML>
-<!--
-	Escape Velocity 2.5 by HTML5 UP
-	html5up.net | @n33co
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
-<html>
-	<head>
-		<title>Escape Velocity by HTML5 UP</title>
-		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<meta name="description" content="" />
-		<meta name="keywords" content="" />
-		<link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400italic,700,900" rel="stylesheet" />
-		<!--[if lte IE 8]><script src="js/html5shiv.js"></script><link rel="stylesheet" href="css/ie8.css" /><![endif]-->
-		<script src="js/jquery.min.js"></script>
-		<script src="js/jquery.dropotron.min.js"></script>
-		<script src="js/config.js"></script>
-		<script src="js/skel.min.js"></script>
-		<script src="js/skel-panels.min.js"></script>
-		<noscript>
-			<link rel="stylesheet" href="css/skel-noscript.css" />
-			<link rel="stylesheet" href="css/style.css" />
-			<link rel="stylesheet" href="css/style-desktop.css" />
-		</noscript>
-	</head>
-	<body class="homepage">
+{% include header.html %}
 
 		<!-- Header Wrapper -->
 			<div id="header-wrapper" class="wrapper">
@@ -42,33 +17,7 @@
 									<!-- /Logo -->
 									
 									<!-- Nav -->
-										<nav id="nav">
-											<ul>
-												<li class="current_page_item"><a href="index.html">Home</a></li>
-												<li>
-													<span>Dropdown</span>
-													<ul>
-														<li><a href="#">Lorem ipsum</a></li>
-														<li><a href="#">Magna veroeros</a></li>
-														<li><a href="#">Etiam nisl</a></li>
-														<li>
-															<span>Sed consequat</span>
-															<ul>
-																<li><a href="#">Lorem dolor</a></li>
-																<li><a href="#">Amet consequat</a></li>
-																<li><a href="#">Magna phasellus</a></li>
-																<li><a href="#">Etiam nisl</a></li>
-																<li><a href="#">Sed feugiat</a></li>
-															</ul>
-														</li>
-														<li><a href="#">Nisl tempus</a></li>
-													</ul>
-												</li>
-												<li><a href="right-sidebar.html">Right Sidebar</a></li>
-												<li><a href="left-sidebar.html">Left Sidebar</a></li>
-												<li><a href="no-sidebar.html">No Sidebar</a></li>
-											</ul>
-										</nav>
+{% include nav.html %}
 									<!-- /Nav -->
 
 								</div>
