--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: homepage
 image: ''
 
-about-color: '#1abc9c'
+about-color: '#3D6661'
 about-title: 'My World and I'
 
 articles-color: '#ecf0f1'
