--- a/film.html
+++ b/film.html
@@ -20,8 +20,8 @@ permalink: /film/
                         </div>
                     </div>
                 </li>
-                <li title="Helisev Maja (House of Chime) ">
-                    <div class="container">
+                <li title="Helisev Maja (House of Chime)">
+                    <div class="container" role="main">
                         <h1>Helisev Maja (House of Chime) </h1>
                         <h3>BFM &amp; EMTA &dash; <em>Director/ Scriptwriter</em></h3>
                         <p class="date">Dec 2008 - Sept 2009</p>
@@ -32,7 +32,7 @@ permalink: /film/
                 </li>
                 </li>
                 <li title="Run to Monaco">
-                    <div class="container">
+                    <div class="container" role="main">
                         <h1>Run to Monaco</h1>
                         <h3><em>On-Site Event Coordinator</em></h3>
                         <p class="date">May 2012</p>
