--- a/education.html
+++ b/education.html
@@ -1,10 +1,10 @@
 ---
 layout: slider
-id: television
-permalink: /television/
+id: education
+permalink: /education/
 ---
 
-                {% for post in site.categories.television %}
+                {% for post in site.categories.education %}
                 <li title="{{ post.title }}">
                     <div class="container" role="main">
                         <h1>{{ post.title }}</h1>
