--- a/creative.html
+++ b/creative.html
@@ -1,10 +1,10 @@
 ---
 layout: slider
-id: television
-permalink: /television/
+id: creative
+permalink: /creative/
 ---
 
-                {% for post in site.categories.television %}
+                {% for post in site.categories.creative %}
                 <li title="{{ post.title }}">
                     <div class="container" role="main">
                         <h1>{{ post.title }}</h1>
