--- a/other.html
+++ b/other.html
@@ -1,10 +1,10 @@
 ---
 layout: slider
-id: television
-permalink: /television/
+id: other
+permalink: /other/
 ---
 
-                {% for post in site.categories.television %}
+                {% for post in site.categories.other %}
                 <li title="{{ post.title }}">
                     <div class="container" role="main">
                         <h1>{{ post.title }}</h1>
