--- a/writing.html
+++ b/writing.html
@@ -1,10 +1,10 @@
 ---
 layout: slider
-id: television
-permalink: /television/
+id: writing
+permalink: /writing/
 ---
 
-                {% for post in site.categories.television %}
+                {% for post in site.categories.writing %}
                 <li title="{{ post.title }}">
                     <div class="container" role="main">
                         <h1>{{ post.title }}</h1>
